# NDL

./: README.md
Task1/: CMakeLists.txt  Clustering.h  README.md  main.cpp
Task2/: README.md  main.py  segment.py
Task3/: README.md  face_detection.sh  videomodul.py
Task3/exps/: face_detection.sh
Task3/exps/faces/: config.yml
Task3/lib/caffe_model/: activations.py  convolutions.py  data_layers.py  detector_layers.py  fillers.py  layers.py  model.py  other_layers.py  poolings.py  slots.py  solver_config.py
Task3/lib/core/: config.py  detector_model.py  test.py  train.py
Task3/lib/datasets/: __init__.py  collections.py  image_sample.py  iterators.py  loaders.py  patch_extractor.py
Task3/lib/detector_nets/: detector_net.py  factory.py  rpn.py  seg_net.py
Task3/lib/layers/: __init__.py  bbox_count.py  bbox_segmentation_layer.py  coverage_classification.py  roi_data_layer.py  sizes_regression.py  smooth_l1_loss.py
Task3/lib/rpn/: __init__.py  anchor_target_layer.py  generate.py  generate_anchors.py  proposal_layer.py  proposal_target_layer.py
Task3/tools/: plot_train_curve.py  test_net.py  train_net.py
